# Flash_Data_Logger

./: , device management, and CSV cache system  .gitignore  FlashDataLogger_v0.9_DebugInstaller.bat  FlashDataLogger_v0.9_DiagnosticInstaller.bat  FlashDataLogger_v0.9_FixedInstaller.bat  FlashDataLogger_v0.9_PowerShellInstaller.ps1  FlashDataLogger_v0.9_SimpleInstaller.bat  Handoff_to_v0.2.md  Handoff_to_v0.3.md  Handoff_to_v0.4.md  Handoff_to_v0.5.md  Handoff_to_v0.6.md  Handoff_to_v0.8.md  Handoff_to_v0.9.md  INSTALLATION_GUIDE.md  MULTI_DEVICE_ATTEMPT_SUMMARY.md  MULTI_DEVICE_ATTEMPT_SUMMARY_v2.md  NEW_CHAT_PROMPT.md  NEW_CHAT_PROMPT_v2.md  NEW_CHAT_PROMPT_v3.md  NEW_CHAT_PROMPT_v4.md  PACKAGE_SUMMARY.md  PERFORMANCE_FIXES_SUMMARY.md  PROJECT_STATUS_v0.6.md  PROJECT_STATUS_v0.8.md  README.md  REQUIREMENTS.md  SIMPLE_INSTALLER_GUIDE.md  VOLTAGE_CONVERSION_SOLUTION.md  create_distribution.bat  create_simple_distribution.bat  install_flash_data_logger.bat  pyproject.toml  run_flash_data_logger.bat  setup.py  simple_test.bat  v0.7_DEVELOPMENT_PLAN.md  v0.7_PHASE1_SUMMARY.md  v0.7_START_PROMPT.md  v0.9_IMPLEMENTATION_SUMMARY.md
FlashDataLogger_v0.9_Distribution/: DISTRIBUTION_README.md  Handoff_to_v1.0.md  LICENSE  MANIFEST.in  VERSION.txt  requirements.txt  setup.py  uninstall_flash_data_logger.bat  verify_installation.bat
FlashDataLogger_v0.9_Simple/: PREREQUISITES.md  README.md  SIMPLE_DISTRIBUTION_README.md  test_installer_debug.bat  test_installer_dry_run.bat  test_real_installer.bat
app/: main.py
scripts/: debug_6824e_available_channels.py  debug_6824e_channels.py  debug_6824e_data_acquisition.py  debug_6824e_timestamps.py  debug_acquisition_path.py  debug_block_sizing.py  debug_complete_plot_flow.py  debug_comprehensive_multi_channel_test.py  debug_config_channels.py  debug_configure_all_channels.py  debug_controller_6824e_lifecycle.py  debug_controller_available_channels.py  debug_controller_extended_config.py  debug_controller_fix_proof.py  debug_controller_plot_queue.py  debug_coupling_and_multi_channel.py  debug_csv_writer_contract.py  debug_data_processing.py  debug_disconnect_trace.py  debug_extended_config.py  debug_extended_configure_multi_channel.py  debug_extended_multi_channel_flow.py  debug_gui_execution_context.py  debug_manual_channel_enable.py  debug_multi_channel_data_flow.py  debug_pipeline_headless.py  debug_plot_adapter.py  debug_plot_logic_only.py  debug_plot_panel_data_flow.py  debug_plot_panel_update_method.py  debug_plot_payload_fix.py  debug_plot_update_timer.py  debug_plotting_performance.py  debug_processed_vs_emitted.py  debug_queue_plot_data.py  debug_session_start_time.py  debug_start_method.py  (+16 more)
(+24 files in other folders)
